# iit-scoreboard

./: .gitignore  Cargo.toml  events.csv  events.html  shell.nix
src/: lib.rs  main.rs
templates/: leaderboard.html
