[package]
name = "iit-scoreboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
rayon = "1.10.0"
reqwest = "0.12.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
