[package]
name = "iit-scoreboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chumsky = "0.9.3"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
html2text = "0.12.5"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
regex = "1.10.6"
reqwest = "0.12.7"
rss = "2.0.9"
serde = { version = "1.0.210", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
